--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,4 +41,24 @@ body {
   }
 }
 
+.ant-otp {
+  height: 44px;
+}
 
+.ant-otp-input {
+  background-color: rgb(39 39 42);
+}
+
+/* Убираем стрелки для всех браузеров */
+input[type="number"] {
+  -moz-appearance: textfield; /* Для Firefox */
+  -webkit-appearance: none; /* Для Safari и Chrome */
+  appearance: none; /* Для современных браузеров */
+}
+
+/* Убираем дополнительные стили для Chrome */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
