--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,6 +41,7 @@ body {
   }
 }
 
+/* инпут ввода номера телефона */
 .ant-otp {
   height: 44px;
 }
@@ -49,8 +50,34 @@ body {
   background-color: rgb(39 39 42);
 }
 
+@media (max-width: 1024px) {
+  .ant-otp {
+    column-gap: 2px;
+  }
+}
+
+@media (max-width: 768px) {
+  .ant-otp {
+    column-gap: 4px;
+  }
+}
+
+@media (max-width: 480px) {
+  .ant-otp {
+    column-gap: 1px;
+  }
+}
+
 .ant-float-btn-icon {
   width: 100% !important;
+}
+
+.ant-notification-notice-message {
+  white-space: pre-line;
+}
+
+.tabler-icon {
+  color: white;
 }
 
 /* Убираем стрелки для всех браузеров */
