--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -93,3 +93,7 @@ input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+.ant-btn-variant-outlined:hover {
+  color: white !important;
+}
